--- a/android-g_hw_sl_pv_9200-master/app/src/main/res/layout/activity_kost_overzicht_scherm.xml
+++ b/android-g_hw_sl_pv_9200-master/app/src/main/res/layout/activity_kost_overzicht_scherm.xml
@@ -8,13 +8,13 @@
 
     <TextView
         android:id="@+id/textViewKostenHeader"
-        android:text="Kostenoverzicht"
         android:layout_width="327dp"
         android:layout_height="29dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:gravity="center"
+        android:text="Kostenoverzicht"
         android:textSize="25dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -24,63 +24,77 @@
 
     <Button
         android:id="@+id/maandAfrekeningBtn"
-        android:text="Maand Afrekening"
-        android:onClick="gaNaarMaandAfrekening"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="28dp"
         android:layout_marginStart="28dp"
         android:layout_marginTop="12dp"
+        android:onClick="gaNaarMaandAfrekening"
+        android:text="Maand Afrekening"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewKostenHeader" />
 
     <Button
         android:id="@+id/voegKostToeBtn"
-        android:text="Kost Toevoegen"
-        android:onClick="voegKostToe"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="12dp"
+        android:onClick="voegKostToe"
+        android:text="Kost Toevoegen"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/maandAfrekeningBtn"
         app:layout_constraintTop_toBottomOf="@+id/textViewKostenHeader" />
 
-    <fragment
-        android:id="@+id/filterSettingsFragment"
-        android:name="com.example.gilles.g_hw_sl_pv_9200.Fragments.Kosten_Datum_Selectie"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="12dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/voegKostToeBtn"
-        />
+    <!--<fragment-->
+    <!--android:id="@+id/filterSettingsFragment"-->
+    <!--android:name="com.example.gilles.g_hw_sl_pv_9200.Fragments.Kosten_Datum_Selectie"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_marginEnd="8dp"-->
+    <!--android:layout_marginLeft="8dp"-->
+    <!--android:layout_marginRight="8dp"-->
+    <!--android:layout_marginStart="8dp"-->
+    <!--android:layout_marginTop="12dp"-->
+    <!--app:layout_constraintEnd_toEndOf="parent"-->
+    <!--app:layout_constraintStart_toStartOf="parent"-->
+    <!--app:layout_constraintTop_toBottomOf="@+id/voegKostToeBtn"-->
+    <!--/>-->
 
-    <Button
-        android:id="@+id/displaySettingsBtn"
-        android:text="Sorteer Opties"
+    <!--<Button-->
+    <!--android:id="@+id/displaySettingsBtn"-->
+    <!--android:text="Sorteer Opties"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_marginEnd="8dp"-->
+    <!--android:layout_marginLeft="8dp"-->
+    <!--android:layout_marginRight="8dp"-->
+    <!--android:layout_marginStart="8dp"-->
+    <!--android:onClick="SortOptionsBtnClick"-->
+    <!--app:layout_constraintEnd_toEndOf="parent"-->
+    <!--app:layout_constraintHorizontal_bias="0.034"-->
+    <!--app:layout_constraintStart_toStartOf="parent"-->
+    <!--app:layout_constraintTop_toBottomOf="@+id/filterSettingsFragment" />-->
+
+    <fragment
+        android:id="@+id/dateSelector"
+        android:name="com.example.gilles.g_hw_sl_pv_9200.Fragments.DateSelectorFragment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
-        android:onClick="SortOptionsBtnClick"
+        android:layout_marginTop="8dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.034"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/filterSettingsFragment" />
+        app:layout_constraintTop_toBottomOf="@+id/maandAfrekeningBtn" />
+
 
     <TextView
         android:id="@+id/kostenListViewHeader"
-        android:text="Kostnaam - Categorie - Gekocht Voor - bedrag"
         android:layout_width="327dp"
         android:layout_height="29dp"
         android:layout_marginEnd="8dp"
@@ -89,20 +103,22 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:gravity="center"
+        android:text="Kostnaam - Categorie - Gekocht Voor - bedrag"
         android:textSize="15dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/displaySettingsBtn" />
+        app:layout_constraintTop_toBottomOf="@+id/dateSelector" />
 
     <ListView
         android:id="@+id/listViewKosten"
         android:layout_width="360dp"
-        android:layout_height="440dp"
+        android:layout_height="384dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/kostenListViewHeader" />
+        app:layout_constraintTop_toBottomOf="@+id/kostenListViewHeader"
+        app:layout_constraintVertical_bias="0.243" />
 
     <TextView
         android:id="@+id/geenKostenMessage"
