--- a/android-g_hw_sl_pv_9200-master/app/src/main/res/layout/activity_kost_toevoegen.xml
+++ b/android-g_hw_sl_pv_9200-master/app/src/main/res/layout/activity_kost_toevoegen.xml
@@ -75,6 +75,32 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/categorieSpinner" />
 
+    <Spinner
+        android:id="@+id/statusSpinner"
+        android:layout_width="250dp"
+        android:layout_height="42dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.95"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/statusTextView"
+        app:layout_constraintTop_toBottomOf="@+id/bedragTextField" />
+
+    <TextView
+        android:id="@+id/statusTextView"
+        android:layout_width="82dp"
+        android:layout_height="28dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="24dp"
+        android:text="Status"
+        android:textSize="18sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/bedrag" />
 
     <Spinner
         android:id="@+id/categorieSpinner"
@@ -85,7 +111,7 @@
         app:layout_constraintHorizontal_bias="0.714"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toEndOf="@+id/categorie"
-        app:layout_constraintTop_toBottomOf="@+id/bedragTextField" />
+        app:layout_constraintTop_toBottomOf="@+id/statusSpinner" />
 
     <TextView
         android:id="@+id/categorie"
@@ -93,12 +119,12 @@
         android:layout_height="28dp"
         android:layout_marginLeft="16dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="24dp"
         android:text="Categorie"
         android:textSize="18sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/bedragTextField" />
+        app:layout_constraintTop_toBottomOf="@+id/statusTextView" />
 
 
     <EditText
