--- a/android-g_hw_sl_pv_9200-master/app/src/main/res/layout/fragment_kosten_datum_selectie.xml
+++ b/android-g_hw_sl_pv_9200-master/app/src/main/res/layout/fragment_kosten_datum_selectie.xml
@@ -215,6 +215,7 @@
         app:layout_constraintTop_toBottomOf="@+id/sortSpinner" />
 
     <Button
+        android:id="@+id/resetVelden"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
