--- a/android-g_hw_sl_pv_9200-master/app/src/main/res/layout/activity_kost_overzicht_scherm.xml
+++ b/android-g_hw_sl_pv_9200-master/app/src/main/res/layout/activity_kost_overzicht_scherm.xml
@@ -113,12 +113,10 @@
     <ListView
         android:id="@+id/listViewKosten"
         android:layout_width="360dp"
-        android:layout_height="384dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_height="360dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/kostenListViewHeader"
-        app:layout_constraintVertical_bias="0.243" />
+        app:layout_constraintTop_toBottomOf="@+id/kostenListViewHeader" />
 
     <TextView
         android:id="@+id/geenKostenMessage"
@@ -133,5 +131,23 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/kostenListViewHeader" />
 
+    <Button
+        android:id="@+id/kostenAanvaardenButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:onClick="kostenAanvaarden"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="Kosten aanvaarden"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.958"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/listViewKosten"
+        app:layout_constraintVertical_bias="1.0" />
 
 </android.support.constraint.ConstraintLayout>
