--- a/webapp-g_hw_sl_pv_9200-Sprint5/G_HW_SL_PV_920/src/app/kennis-centrum/kennis-centrum.component.html
+++ b/webapp-g_hw_sl_pv_9200-Sprint5/G_HW_SL_PV_920/src/app/kennis-centrum/kennis-centrum.component.html
@@ -1,4 +1,6 @@
 <div class="row">
+  <div *ngIf='errorMsg' class="ui error message">{{errorMsg}}</div>
+
   <div class="text-center mt-5 col-3 ml-4">
     <!--SIDEBAR 'Rubrieken', with article names list (click to open)-->
     <ul class="list-group" *ngIf="selectedArticle">
@@ -7,7 +9,7 @@
         {{article.title}}
       </li>
     </ul>
-    <button type="button" class="mb-4 mt-4 btn btn-primary" *ngIf="isModerator" routerLink="/artikelAanmaken">
+    <button type="button" class="mb-4 mt-4 btn btn-primary" *ngIf="isModerator | async" routerLink="/artikelAanmaken" style="font-size: 1em">
       Voeg nieuw artikel toe
     </button>
   </div>
@@ -24,7 +26,7 @@
             <h2 class="card-title text-capitalize">{{selectedArticle.title}}</h2>
           </div>
           <div class="col-2"></div>
-          <div *ngIf="isModerator" class="col-2">
+          <div *ngIf="isModerator | async" class="col-2">
             <button class="btn btn-primary" (click)="deleteSelectedArticle()">
               <span>
                 <i class="fa fa-trash fa-2x"></i>
@@ -39,17 +41,18 @@
         </div>
       </div>
       <div class="card-body">
-        <p class="card-text mt-5">
-          {{selectedArticle.text}}
+        <p class=" m-5" [innerHTML]="selectedArticle.text" style="text-align: left">
+          <!--*ngFor="let line of selectedArticle.text"-->
+          <!-- {{selectedArticle.text}} -->
         </p>
-        <blockquote class="blockquote mb-0">
+        <blockquote class="blockquote mb-0" *ngIf="selectedArticle.source">
           <footer class="blockquote-footer">Bron:
             <cite title="Source Title">{{selectedArticle.source}}</cite>
           </footer>
         </blockquote>
       </div>
 
-      <div class="card-footer text-muted">
+      <div class="card-footer text-muted" *ngIf="selectedArticle.hasSource">
         Auteur: {{selectedArticle.author }}
       </div>
     </div>
