--- a/android-g_hw_sl_pv_9200-master/app/src/main/res/layout/activity_kost_overzicht_scherm.xml
+++ b/android-g_hw_sl_pv_9200-master/app/src/main/res/layout/activity_kost_overzicht_scherm.xml
@@ -122,12 +122,16 @@
         android:id="@+id/geenKostenMessage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
         android:layout_marginLeft="88dp"
+        android:layout_marginRight="8dp"
         android:layout_marginStart="88dp"
         android:layout_marginTop="112dp"
         android:gravity="center"
         android:text="Er zijn nog geen kosten aangemaakt."
         android:visibility="invisible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/kostenListViewHeader" />
 
